--- a/pom.xml
+++ b/pom.xml
@@ -56,13 +56,12 @@
                 <version>3.11.0</version>
                 <configuration>
                     <release>21</release>
-                    <enablePreview>true</enablePreview>
-                    <compilerArgs>
-                       
-                        <arg>--add-modules</arg>
+                    <!-- <enablePreview>true</enablePreview> -->
+                    <!-- <compilerArgs>
+                       <arg>- -add-modules</arg>
                         <arg>jdk.incubator.vector</arg>
-                        <!-- <arg>-XX:+EnableDynamicAgentLoading -->
-                    </compilerArgs>
+                        <arg>-XX:+EnableDynamicAgentLoading 
+                    </compilerArgs> -->
                 </configuration>
             </plugin>    
         </plugins>
